[package]
name = "elevator-rs"
version = "0.1.0"
authors = ["Pure-Peace <purepeace_@outlook.com>"]
edition = "2021"

[[bin]]
name = "elevator_service"
path = "src/main.rs"

[lib]
name = "elevator_core"
path = "src/lib.rs"


[dependencies]
askama = "0.12.1"
axum = { version = "0.6.20", features = ["query"] }
tokio = { version = "1.34.0", features = [
    "rt",
    "sync",
    "signal",
    "macros",
    "time",
    "fs",
] }
env_logger = "0.10.1"
tracing = "0.1"
tracing-subscriber = "0.3"

bitmask-enum = "2.1"

thiserror = "1.0"
anyhow = "1.0"

arc-swap = "1.6"
atomic_float = "0.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

paste = "1.0"
